# WhatsIn

./: Dockerfile  README.md  docker-compose.yml  set_up.sh
.github/workflows/: test.yml
be/: .gitignore  Cargo.toml  Makefile  docker_compose.yaml
be/migrations/: 20231015_news.down.sql  20231015_news.up.sql
be/src/: config.rs  crawler.rs  enums.rs  error.rs  main.rs  news_route.rs  schemas.rs  swagger_docs.rs
be/src/domain/: news.rs
be/src/repository/: mod.rs  news.rs
fe/: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
fe/android/app/: build.gradle
fe/android/app/src/main/: AndroidManifest.xml
fe/android/app/src/main/kotlin/com/example/whatsin_fe/: MainActivity.kt
fe/ios/Runner/: Info.plist
fe/ios/Runner.xcodeproj/: project.pbxproj
fe/lib/: main.dart  style.dart
fe/lib/widgets/: Business.dart  Culture.dart  Economy.dart  Entertainment.dart  General.dart  Health.dart  Home.dart  Politics.dart  Science.dart  Society.dart  Sports.dart  TechScience.dart  Technology.dart  World.dart  widgets.dart
fe/linux/: CMakeLists.txt  my_application.cc
fe/macos/Runner.xcodeproj/: project.pbxproj
fe/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
fe/macos/Runner/Configs/: AppInfo.xcconfig
fe/test/: widget_test.dart
fe/test/unit_test/: api_get_test.dart  api_get_test.mocks.dart
fe/test/widget_test/: my_app_test.dart
fe/web/: index.html  manifest.json
fe/windows/: CMakeLists.txt
fe/windows/runner/: Runner.rc  main.cpp
mysql-init/: 20231210_news.sql
