[package]
name = "whats_in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = [ "macros" ]}
axum-macros = {version="*"}
dotenv = "0.15.0"
json = "0.12.4"
serde = "*"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
utoipa = {version="*",features=["axum_extras","uuid","chrono","decimal"]}
utoipa-swagger-ui = { version="*" , features=["axum"] }
sqlx = { version = "*", features = [ "runtime-tokio-rustls", "migrate", "postgres","uuid","chrono","offline","decimal","json"] }
uuid = { version = "*", features = ["v4", "fast-rng", "macro-diagnostics","serde" ]}
reqwest = {version="*",features=["json"]}
tower = { version = "*", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace","cors"] }


[[bin]]
name = "whats_in"
path = "./src/main.rs"
